--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           path: 'github'
-          ref: 'main'
+          ref: 'moontv'
 
       - name: Commit to Github
         run: |
